// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Page__PageWrapper-mddda5-0 kuPUTZ"
  id="A Page"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ Page__Section-mddda5-1 jqFETz"
    id={null}
    rows={null}
  >
    <h4
      className="Typography__TitleText-sc-19auepv-2 czurBm"
      fontSize="1.25em"
      fontWeight={600}
      letterSpacing="0px"
    >
      My Latest Musings
    </h4>
    <p
      className="Typography__Paragraph-sc-19auepv-3 NmRuW"
      fontSize="0.876em"
      fontWeight={300}
      id={null}
      letterSpacing="0px"
    >
      Totally Worth The Read...Enjoy!
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    >
      Just think about these things in your mind - then bring them into your world. Isn't that fantastic? You can just push a little tree out of your brush like that. Look around, look at what we have. Beauty is everywhere, you only have to look to see it. I thought today we would make a happy little stream that's just running through the woods here. Just a little indication.
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL Page__Body-mddda5-2 lmAbxe"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 hzeTCC Page__Section-mddda5-1 jqFETz"
      id={null}
      rows={null}
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 KxMwb"
        fontSize="1.15em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Section 1
      </h5>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        This is probably the greatest thing to happen in my life - to be able to share this with you.  Here's something that's fun. Talk to trees, look at the birds. Whatever it takes. It's so important to do something every day that will make you happy.
      </p>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        This is probably the greatest thing to happen in my life - to be able to share this with you.  Here's something that's fun. Talk to trees, look at the birds. Whatever it takes. It's so important to do something every day that will make you happy.
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 hzeTCC Page__Section-mddda5-1 jqFETz"
      id={null}
      rows={null}
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 KxMwb"
        fontSize="1.15em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Section 2
      </h5>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        This is probably the greatest thing to happen in my life - to be able to share this with you.  Here's something that's fun. Talk to trees, look at the birds. Whatever it takes. It's so important to do something every day that will make you happy.
      </p>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        This is probably the greatest thing to happen in my life - to be able to share this with you.  Here's something that's fun. Talk to trees, look at the birds. Whatever it takes. It's so important to do something every day that will make you happy.
      </p>
    </section>
  </section>
</div>
`;

exports[` 2`] = `
<div
  className="Page__PageWrapper-mddda5-0 kuPUTZ"
  id={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL Page__Body-mddda5-2 lmAbxe"
    id={null}
    rows={null}
  >
    <h4
      className="Typography__TitleText-sc-19auepv-2 czurBm"
      fontSize="1.25em"
      fontWeight={600}
      letterSpacing="0px"
    >
      My Latest Musings
    </h4>
    <p
      className="Typography__Paragraph-sc-19auepv-3 NmRuW"
      fontSize="0.876em"
      fontWeight={300}
      id={null}
      letterSpacing="0px"
    >
      Totally Worth The Read...Enjoy!
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    >
      Just think about these things in your mind - then bring them into your world. Isn't that fantastic? You can just push a little tree out of your brush like that. Look around, look at what we have. Beauty is everywhere, you only have to look to see it. I thought today we would make a happy little stream that's just running through the woods here. Just a little indication.
    </p>
    <h5
      className="Typography__TitleText-sc-19auepv-2 KxMwb"
      fontSize="1.15em"
      fontWeight={400}
      letterSpacing="0px"
    >
      Section 1
    </h5>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIbntl"
      fontSize="0.876em"
      fontWeight={400}
      id={null}
      letterSpacing="0px"
    >
      This is probably the greatest thing to happen in my life - to be able to share this with you.  Here's something that's fun. Talk to trees, look at the birds. Whatever it takes. It's so important to do something every day that will make you happy.
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIbntl"
      fontSize="0.876em"
      fontWeight={400}
      id={null}
      letterSpacing="0px"
    >
      This is probably the greatest thing to happen in my life - to be able to share this with you.  Here's something that's fun. Talk to trees, look at the birds. Whatever it takes. It's so important to do something every day that will make you happy.
    </p>
    <h5
      className="Typography__TitleText-sc-19auepv-2 KxMwb"
      fontSize="1.15em"
      fontWeight={400}
      letterSpacing="0px"
    >
      Section 2
    </h5>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIbntl"
      fontSize="0.876em"
      fontWeight={400}
      id={null}
      letterSpacing="0px"
    >
      This is probably the greatest thing to happen in my life - to be able to share this with you.  Here's something that's fun. Talk to trees, look at the birds. Whatever it takes. It's so important to do something every day that will make you happy.
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIbntl"
      fontSize="0.876em"
      fontWeight={400}
      id={null}
      letterSpacing="0px"
    >
      This is probably the greatest thing to happen in my life - to be able to share this with you.  Here's something that's fun. Talk to trees, look at the birds. Whatever it takes. It's so important to do something every day that will make you happy.
    </p>
  </section>
</div>
`;
